--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section>
     <h2>Expertise</h2>
 
-    <h3>Technical</h3>
+    <h3>Technical Skills</h3>
     <ul>
       <li>Programming (C#) and .NET extraction in Visual Basic</li>
       <li>ETL experience on projects</li>
@@ -57,7 +57,7 @@
       <li>Microsoft Office: Word, Excel, PowerPoint, Access</li>
     </ul>
 
-    <h3>Personal</h3>
+    <h3>Personal Skills</h3>
     <ul>
       <li>Problem solving and critical thinking</li>
       <li>Communicative and organized</li>
